Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89729

Error compiling Qt with MSVC and c++2a

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.1, 6.1.0 Alpha
    • 6.0.0
    • Core: Other
    • None
    • VS 2019: MSVC 19.28.29335.0
      Qt source: 6.0.0-0-202012051310 installed with maintenance tool
    • Windows
    • 80bcba5661311ed0934884899420ed435f3a20c6 (qt/qtbase/6.0) 1dc4e5d3ebc265d13fe29657b81b7c44ea5f0ed2 (qt/qtbase/dev)

      Configure parameters:

      -c++std c++2a -debug-and-release -mp -opensource -confirm-license

      Compilation errors:

      [...]\qtbase\src\corelib\serialization\qxmlstream_p.h(108): error C2676: binary '<=>': 'QStringView' does not define this operator or a conversion to a type acceptable to the predefined operator
      [...]\qtbase\src\corelib\serialization\qxmlstream_p.h(122): error C2676: binary '<=>': 'QStringView' does not define this operator or a conversion to a type acceptable to the predefined operator

       

        For Gerrit Dashboard: QTBUG-89729
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            chrisaverage Krzysztof Kawa
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes