XmlStringRef: remove operator<=>

It's defined in terms of operator<=> on QStringView, which does
not exist, causing a compile error.

Change-Id: I64fc60da4e52c7e53be7849d9b42952be139a816
Fixes: QTBUG-89729
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 1dc4e5d3ebc265d13fe29657b81b7c44ea5f0ed2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>